cleanup in parsing dates